--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <meta name="msapplication-TileColor" content="#ffffff">
 <meta name="msapplication-TileImage" content="assets/img/favicon/ms-icon-144x144.png">
 <meta name="theme-color" content="#ffffff">
+<meta property="og:image" content="assets/img/contact-visual.png">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
