--- a/terms_of_service.html
+++ b/terms_of_service.html
@@ -35,8 +35,11 @@
 </head>
 
 <body>
+    <a class="header--logo" href="index.html">
+        <img src="assets/img/logo.png" alt="ZeoFlow">
+    </a>
     <div style="font-family:'Varela Round', sans-serif;">	
-        <div style="background-color:#0d0d0d;font-family:'Varela Round', sans-serif;padding-bottom:200px;padding-top:80px;background-size:cover;background-position:center;background-repeat:no-repeat;background-image:url(&quot;null&quot;);">
+        <div style="background-color:#0d0d0d;font-family:'Varela Round', sans-serif;padding-bottom:190px;padding-top:100px;background-size:cover;background-position:center;background-repeat:no-repeat;background-image:url(&quot;null&quot;);">
             <div class="container hero">
                 <div class="row">
                     <div class="col-12 col-lg-6 col-xl-5 offset-xl-1" data-aos="fade-up" data-aos-once="true">
