--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -35,6 +35,9 @@
 </head>
 
 <body>
+    <a class="header--logo" href="index.html">
+        <img src="assets/img/logo.png" alt="ZeoFlow">
+    </a>
     <div style="font-family:'Varela Round', sans-serif;">
 		<div style="background-color:#0d0d0d;font-family:'Varela Round', sans-serif;padding-bottom:190px;padding-top:100px;background-size:cover;background-position:center;background-repeat:no-repeat;background-image:url(&quot;null&quot;);">
             <div class="container hero">
