--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -35,7 +35,7 @@
 </head>
 
 <body>
-    <a class="header--logo" href="index.html">
+    <a class="header--logo" href="index.html" id="navbar">
         <img src="assets/img/logo.png" alt="ZeoFlow">
     </a>
     <div style="font-family:'Varela Round', sans-serif;">
@@ -47,7 +47,7 @@
                         <p style="margin-bottom:10px;margin-left:5px;font-family:'Varela Round', sans-serif;color:#e8e8e8;">When you use our services, you’re trusting us with your information. We understand this is a big responsibility and work hard to protect your information and put you in control.</p>
 						<p style="margin-bottom:10px;margin-left:5px;font-size:14px;font-family:'Varela Round', sans-serif;color:#e8e8e8;">This Privacy Policy is meant to help you understand what information we collect, why we collect it, and how you can update, manage, export, and delete your information.</p>
                     </div>
-                    <div class="col-md-5 col-lg-5 offset-lg-1 offset-xl-0 d-none d-lg-block phone-holder" data-aos="fade-up" data-aos-once="true" style="margin-left:22px;margin-top:50px;"><img src="assets/img/preview.png" data-bs-hover-animate="swing">
+                    <div class="col-md-5 col-lg-5 offset-lg-1 offset-xl-0 d-none d-lg-block phone-holder" data-aos="fade-up" data-aos-once="true" style="margin-left:22px;margin-top:50px;"><img src="assets/img/icons/ic_privacy_policy_icon.png" data-bs-hover-animate="swing">
                         <div class="iphone-mockup"></div>
                     </div>
                 </div>
