--- a/terms_of_service.html
+++ b/terms_of_service.html
@@ -35,7 +35,7 @@
 </head>
 
 <body>
-    <a class="header--logo" href="index.html">
+    <a class="header--logo" href="index.html" id="navbar">
         <img src="assets/img/logo.png" alt="ZeoFlow">
     </a>
     <div style="font-family:'Varela Round', sans-serif;">	
@@ -47,7 +47,7 @@
                         <p style="margin-bottom:10px;margin-left:5px;font-family:'Varela Round', sans-serif;color:#e8e8e8;">Thanks for using our products and services (“Services”). If you’re based in the European Economic Area or Switzerland, unless stated otherwise in any additional terms, the Services are provided by ZeoFlow, a company incorporated and operating under the laws of Romania, and located at Brasov, Romania.</p>
 						<p style="margin-bottom:10px;margin-left:5px;font-size:14px;font-family:'Varela Round', sans-serif;color:#e8e8e8;">By using our Services, you are agreeing to these terms. Please read them carefully.</p>
                     </div>
-                    <div class="col-md-5 col-lg-5 offset-lg-1 offset-xl-0 d-none d-lg-block phone-holder" data-aos="fade-up" data-aos-once="true" style="margin-left:22px;margin-top:50px;"><img src="assets/img/preview.png" data-bs-hover-animate="swing">
+                    <div class="col-md-5 col-lg-5 offset-lg-1 offset-xl-0 d-none d-lg-block phone-holder" data-aos="fade-up" data-aos-once="true" style="margin-left:22px;margin-top:50px;"><img src="assets/img/icons/ic_terms_of_service_icon.png" data-bs-hover-animate="swing">
                         <div class="iphone-mockup"></div>
                     </div>
                 </div>
