--- a/terms_of_service.html
+++ b/terms_of_service.html
@@ -35,9 +35,11 @@
 </head>
 
 <body>
-    <a class="header--logo" href="index.html" id="navbar">
-        <img src="assets/img/logo.png" alt="ZeoFlow">
-    </a>
+	<div>
+		<a class="header--logo" href="index.html" id="navbar">
+			<img src="assets/img/logo.png" class="header--logo--img" id="logoNavbar" alt="ZeoFlow" data-bs-hover-animate="swing">
+		</a>
+	</div>
     <div style="font-family:'Varela Round', sans-serif;">	
         <div style="background-color:#0d0d0d;font-family:'Varela Round', sans-serif;padding-bottom:190px;padding-top:100px;background-size:cover;background-position:center;background-repeat:no-repeat;background-image:url(&quot;null&quot;);">
             <div class="container hero">
