--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <!-- notification for small viewports and landscape oriented smartphones -->
 <div class="device-notification">
   <a class="device-notification--logo" href="#0">
-    <img src="assets/img/logo.png" alt="ZeoFlow">
+    <img src="assets/img/logo.png" class="header--logo--img" alt="ZeoFlow">
     <p>ZeoFlow</p>
   </a>
   <p class="device-notification--message">ZeoFlow has so much to offer that i request you orient your device to portrait or find a larger screen. You won't be disappointed.</p>
@@ -45,7 +45,7 @@
       <div class="l-wrapper">
         <header class="header">
           <a class="header--logo" href="index.html">
-            <img src="assets/img/logo.png" alt="ZeoFlow">
+    <img src="assets/img/logo.png" class="header--logo--img" alt="ZeoFlow">
             <p>ZeoFlow</p>
           </a>
           <button class="header--cta cta">About Developer</button>
@@ -310,7 +310,7 @@
                   </li>
                     
                   <li class="slider--item slider--item-right">
-                    <a href="hify.html" >
+                    <a href="safety_center.html" >
                       <div class="slider--item-image">
                         <img src="assets/img/icons/ic_safety_center_icon.png" alt="ZeoFlow Safety Center">
                       </div>
