--- a/safety_center.html
+++ b/safety_center.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ZeoFlow Privacy Policy</title>
+    <title>ZeoFlow Terms of Service</title>
     <link rel="apple-touch-icon" sizes="57x57" href="assets/img/favicon/apple-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="assets/img/favicon/apple-icon-60x60.png">
 <link rel="apple-touch-icon" sizes="72x72" href="assets/img/favicon/apple-icon-72x72.png">
@@ -30,7 +30,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/css/lightbox.min.css">
     <link rel="stylesheet" href="assets/css/styles.min.css">
   <meta name="description" content="Website created by Teodor Grigor">
-  <meta name="keywords" content="ZeoFlow, ZF, ZeoFlow Privacy Policy, Privacy Policy, ZF Privacy Policy">
+  <meta name="keywords" content="ZeoFlow, ZF, ZeoFlow Terms Of Service, Termsof Service, ZF Terms Of Service">
   <meta name="author" content="Teodor Grigor">
 </head>
 
@@ -40,16 +40,16 @@
 			<img src="assets/img/logo.png" class="header--logo--img" id="logoNavbar" alt="ZeoFlow" data-bs-hover-animate="swing">
 		</a>
 	</div>
-    <div style="font-family:'Varela Round', sans-serif;">
-		<div style="background-color:#0d0d0d;font-family:'Varela Round', sans-serif;padding-bottom:190px;padding-top:100px;background-size:cover;background-position:center;background-repeat:no-repeat;background-image:url(&quot;null&quot;);">
+    <div style="font-family:'Varela Round', sans-serif;">	
+        <div style="background-color:#0d0d0d;font-family:'Varela Round', sans-serif;padding-bottom:190px;padding-top:100px;background-size:cover;background-position:center;background-repeat:no-repeat;background-image:url(&quot;null&quot;);">
             <div class="container hero">
                 <div class="row">
                     <div class="col-12 col-lg-6 col-xl-5 offset-xl-1" data-aos="fade-up" data-aos-once="true">
-                        <h1 style="margin-bottom:10px;margin-left:5px;font-family:'Varela Round', sans-serif;margin-top:75px;color:#03A9F4;">Privacy Policy</h1>
-                        <p style="margin-bottom:10px;margin-left:5px;font-family:'Varela Round', sans-serif;color:#e8e8e8;">When you use our services, you’re trusting us with your information. We understand this is a big responsibility and work hard to protect your information and put you in control.</p>
-						<p style="margin-bottom:10px;margin-left:5px;font-size:14px;font-family:'Varela Round', sans-serif;color:#e8e8e8;">This Privacy Policy is meant to help you understand what information we collect, why we collect it, and how you can update, manage, export, and delete your information.</p>
+                        <h1 style="margin-bottom:10px;margin-left:5px;font-family:'Varela Round', sans-serif;margin-top:60px;color:#03A9F4;">Welcome to Safety Center!</h1>
+                        <p style="margin-bottom:10px;margin-left:5px;font-family:'Varela Round', sans-serif;color:#e8e8e8;">Thanks for using our products and services (“Services”). If you’re based in the European Economic Area or Switzerland, unless stated otherwise in any additional terms, the Services are provided by ZeoFlow, a company incorporated and operating under the laws of Romania, and located at Brasov, Romania.</p>
+						<p style="margin-bottom:10px;margin-left:5px;font-size:14px;font-family:'Varela Round', sans-serif;color:#e8e8e8;">By using our Services, you are agreeing to these terms. Please read them carefully.</p>
                     </div>
-                    <div class="col-md-5 col-lg-5 offset-lg-1 offset-xl-0 d-none d-lg-block phone-holder" data-aos="fade-up" data-aos-once="true" style="margin-left:22px;margin-top:50px;"><img src="assets/img/icons/ic_privacy_policy_icon.png" data-bs-hover-animate="swing">
+                    <div class="col-md-5 col-lg-5 offset-lg-1 offset-xl-0 d-none d-lg-block phone-holder" data-aos="fade-up" data-aos-once="true" style="margin-left:22px;margin-top:50px;"><img src="assets/img/icons/ic_safety_center_icon.png" data-bs-hover-animate="swing">
                         <div class="iphone-mockup"></div>
                     </div>
                 </div>
@@ -59,21 +59,9 @@
     <div class="features-boxed">
         <div class="container">
             <div class="intro">
-                <h2 class="text-center" data-aos="slide-up" data-aos-once="true" style="color:#0288D1;">ZeoFlow Privacy Policy</h2>
+                <h2 class="text-center" data-aos="slide-up" data-aos-once="true" style="color:#0288D1;">ZeoFlow Safety Center</h2>
             </div>
             <div class="row justify-content-center features" data-aos="slide-up" data-aos-once="true" style="padding-top:2px;">
-                <div class="item">
-                    <div class="box" style="font-family:'Varela Round', sans-serif;padding-bottom:49px;">
-                        <h3 class="name" style="color:#0288D1;">We want you to understand the types of information we collect as you use our services</h3>
-                        <p class="data" align="justify">We want you to understand the types of information we collect as you use our servicesWe collect information to provide better services to all our users. The information ZeoFlow collects, and how that information is used, depends on how you use our services and how you manage your privacy controls.<br><br>When you’re not signed in to a ZeoFlow Account, we store the information we collect with unique identiers tied to the browser, application, or device you’re using.<br><br>When you’re signed in, we also collect information that we store with your ZeoFlow Account, which we treat as personal information.</p>
-					</div>
-                </div>
-                <div class="item">
-                    <div class="box" style="font-family:'Varela Round', sans-serif;padding-bottom:49px;">
-                        <h3 class="name" style="color:#0288D1;">Things you create or provide to us</h3>
-                        <p class="data" align="justify">When you create a ZeoFlow Account, you provide us with personal information that includes your name and a password. You can also choose to add a phone number or payment information to your account.<br><br>Even if you aren’t signed in to a ZeoFlow Account, you might choose to provide us with information — like an email address to receive updates about our services. We also collect the content you create, upload, or receive from others when using our services. This includes things like message you write and receive, photos and videos you like, comment or save.</p>
-					</div>
-                </div>
 				<!--
                 <div class="item">
                     <div class="box" style="font-family:'Varela Round', sans-serif;padding-bottom:49px;">
