--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="description" content="Website created by Teodor Grigor">
-  <meta name="keywords" content="website, android, programming, android apps, java, firebase, googleapis, google, developer, coder, blogger, programmer, zeoflow, ZeoFlow Inc, ZF">
+  <meta name="description" content="ZeoFlow Homepage. Check the website to keep up with ZeoFlow App evolution and check the new features. App created by Teodor Grigor">
+  <meta name="keywords" content="zeoflow, ZeoFlow Inc, ZF, ZeoFlow Romania, ZF Teodor Grigor, Social ZeoFlow">
   <meta name="author" content="Teodor Grigor">
   <link rel="stylesheet" href="assets/css/main.css">
 </head>
