--- a/index.html
+++ b/index.html
@@ -179,9 +179,8 @@
                     <a href="tel:0040758334888">+40 758-334-888</a>
                   </div>
                   <ul class="modal--options">
-                    <li><a href="https://plus.google.com/118398512849520996107" target="_blank">Google+</a></li>
-                    <li><a href="https://twitter.com/GrigorTeodor" target="_blank">Twitter</a></li>
-					<li><a href="https://www.instagram.com/grigor.teodor/" target="_blank">Instagram</a></li>
+                    <li><a href="https://twitter.com/ZeoFlow" target="_blank">Twitter</a></li>
+					<li><a href="https://www.instagram.com/zeo.flow/" target="_blank">Instagram</a></li>
                     <li><a href="mailto:grigor.teodor@gmail.com" target="_blank">Contact Developer</a></li>
                   </ul>
                 </div>
