--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
     <img src="assets/img/logo.png" class="header--logo--img" alt="ZeoFlow">
             <p>ZeoFlow</p>
           </a>
+          <a href="teodor_grigor.html">
           <button class="header--cta cta">About Developer</button>
+		  </a>
           <div class="header--nav-toggle">
             <span></span>
           </div>
