--- a/teodor_grigor.html
+++ b/teodor_grigor.html
@@ -30,7 +30,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/css/lightbox.min.css">
     <link rel="stylesheet" href="assets/css/styles.min.css">
   <meta name="description" content="Website created by Teodor Grigor">
-  <meta name="keywords" content="ZeoFlow, ZF, ZeoFlow Privacy Policy, Privacy Policy, ZF Privacy Policy">
+  <meta name="keywords" content="ZeoFlow, ZF, ZeoFlow CEO, Teodor Grigor, Grigor Teodor, ZeoFlow CEO/Owner/Founder">
   <meta name="author" content="Teodor Grigor">
 </head>
 
