--- a/teodor_grigor.html
+++ b/teodor_grigor.html
@@ -29,7 +29,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/css/lightbox.min.css">
     <link rel="stylesheet" href="assets/css/styles.min.css">
-  <meta name="description" content="Website created by Teodor Grigor">
+  <meta name="description" content="Find out more about the CEO/Owner/Founder of ZeoFlow - Find out more about Teodor Grigor">
   <meta name="keywords" content="ZeoFlow, ZF, ZeoFlow CEO, Teodor Grigor, Grigor Teodor, ZeoFlow CEO/Owner/Founder">
   <meta name="author" content="Teodor Grigor">
 </head>
