--- a/teodor_grigor.html
+++ b/teodor_grigor.html
@@ -45,9 +45,9 @@
             <div class="container hero">
                 <div class="row">
                     <div class="col-12 col-lg-6 col-xl-5 offset-xl-1" data-aos="fade-up" data-aos-once="true">
-                        <h1 style="margin-bottom:10px;margin-left:5px;font-family:'Varela Round', sans-serif;margin-top:75px;color:#03A9F4;">Privacy Policy</h1>
-                        <p style="margin-bottom:10px;margin-left:5px;font-family:'Varela Round', sans-serif;color:#e8e8e8;">When you use our services, you’re trusting us with your information. We understand this is a big responsibility and work hard to protect your information and put you in control.</p>
-						<p style="margin-bottom:10px;margin-left:5px;font-size:14px;font-family:'Varela Round', sans-serif;color:#e8e8e8;">This Privacy Policy is meant to help you understand what information we collect, why we collect it, and how you can update, manage, export, and delete your information.</p>
+                        <h1 style="margin-bottom:10px;margin-left:5px;font-family:'Varela Round', sans-serif;margin-top:75px;color:#FF9800;">Teodor Grigor</h1>
+                        <p style="margin-bottom:10px;margin-left:5px;font-family:'Varela Round', sans-serif;color:#FFE0B2;">Teodor Grigor (born Jan 01, 2000) is a Romanian technology entrepreneur. He is known for founding and leading ZeoFlow as its chief executive officer (CEO).</p>
+						<p style="margin-bottom:10px;margin-left:5px;font-size:14px;font-family:'Varela Round', sans-serif;color:#FFE0B2;">This Privacy Policy is meant to help you understand what information we collect, why we collect it, and how you can update, manage, export, and delete your information.</p>
                     </div>
                     <div class="col-md-5 col-lg-5 offset-lg-1 offset-xl-0 d-none d-lg-block phone-holder" data-aos="fade-up" data-aos-once="true" style="margin-left:22px;margin-top:50px;"><img src="assets/img/icons/ic_privacy_policy_icon.png" data-bs-hover-animate="swing">
                         <div class="iphone-mockup"></div>
