--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
   <meta name="keywords" content="zeoflow, ZeoFlow Inc, ZF, ZeoFlow Romania, ZF Teodor Grigor, Social ZeoFlow">
   <meta name="author" content="Teodor Grigor">
   <link rel="stylesheet" href="assets/css/main.css">
+  <meta name="google-site-verification" content="G1ZSYVwsHGiLF6-GqZt4oaetaB3hFVW4gR4rQh1jomg" />
 </head>
 <body>
 
