--- a/teodor_grigor.html
+++ b/teodor_grigor.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>ZeoFlow</title>
+    <title>Teodor Grigor | ZeoFlow CEO</title>
     <link rel="apple-touch-icon" sizes="57x57" href="assets/img/favicon/apple-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="assets/img/favicon/apple-icon-60x60.png">
 <link rel="apple-touch-icon" sizes="72x72" href="assets/img/favicon/apple-icon-72x72.png">
@@ -58,7 +58,7 @@
         </header>
         <nav class="l-side-nav">
           <ul class="side-nav">
-            <li class="is-active"><span>Home</span></li>
+            <li class="is-active"><span>Job</span></li>
             <li><span>Apps</span></li>
             <li><span>Location</span></li>
             <li><span>About</span></li>
@@ -347,7 +347,7 @@
     </div>
   </div>
   <ul class="outer-nav">
-    <li class="is-active">Home</li>
+    <li class="is-active">Job</li>
     <li>Apps</li>
     <li>Location</li>
     <li>About</li>
