--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <link rel="manifest" href="assets/img/favicon/manifest.json">
 <meta name="msapplication-TileColor" content="#ffffff">
 <meta name="msapplication-TileImage" content="assets/img/favicon/ms-icon-144x144.png">
-<meta name="theme-color" content="#212121">
+<meta name="theme-color" content="#0c0c0c">
 <meta property="og:image" content="assets/img/contact-visual.png">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
