--- a/teodor_grigor.html
+++ b/teodor_grigor.html
@@ -35,9 +35,9 @@
 <div class="device-notification">
   <a class="device-notification--logo" href="#0">
     <img src="assets/img/logo.png" class="header--logo--img" alt="ZeoFlow">
-    <p>ZeoFlow</p>
+    <p>Teodor Grigor</p>
   </a>
-  <p class="device-notification--message">ZeoFlow has so much to offer that i request you orient your device to portrait or find a larger screen. You won't be disappointed.</p>
+  <p class="device-notification--message">To find out more about Teodor Grigor, the ZeoFlow ECO, please orient your device to portrait or find a larger screen. You won't be disappointed.</p>
 </div>
 
 <div class="perspective effect-rotate-left">
@@ -49,9 +49,6 @@
     <img src="assets/img/logo.png" class="header--logo--img" alt="ZeoFlow">
             <p>ZeoFlow</p>
           </a>
-          <a href="teodor_grigor.html">
-          <button class="header--cta cta">About Developer</button>
-		  </a>
           <div class="header--nav-toggle">
             <span></span>
           </div>
