--- a/terms_of_service.html
+++ b/terms_of_service.html
@@ -36,7 +36,7 @@
 
 <body>
 	<div>
-		<a class="header--logo" href="index.html" id="navbar">
+		<a class="header--logo" href="index" id="navbar">
 			<img src="assets/img/logo.png" class="header--logo--img" id="logoNavbar" alt="ZeoFlow" data-bs-hover-animate="swing">
 		</a>
 	</div>
@@ -77,7 +77,7 @@
                 <div class="item">
                     <div class="box" style="font-family:'Varela Round', sans-serif;padding-bottom:49px;">
                         <h3 class="name" style="color:#0288D1;">Privacy and Copyright Protection</h3>
-                        <p class="data" align="justify">ZeoFlow's <a href="privacy_policy.html">privacy policies</a> explain how we treat your personal data and protect your privacy when you use our Services.<br><br>We respond to notices of alleged copyright infringement and terminate accounts of repeat infringers according to the process set out in the U.S. Digital Millennium Copyright Act.<br><br>We provide information to help copyright holders manage their intellectual property online. If you think somebody is violating your copyrights and want to notify us, you can find information about submitting notices and ZeoFlow's policy about responding to notices in our Help Center.</p>
+                        <p class="data" align="justify">ZeoFlow's <a href="privacy_policy">privacy policies</a> explain how we treat your personal data and protect your privacy when you use our Services.<br><br>We respond to notices of alleged copyright infringement and terminate accounts of repeat infringers according to the process set out in the U.S. Digital Millennium Copyright Act.<br><br>We provide information to help copyright holders manage their intellectual property online. If you think somebody is violating your copyrights and want to notify us, you can find information about submitting notices and ZeoFlow's policy about responding to notices in our Help Center.</p>
 					</div>
                 </div>
 				<!--
