--- a/safety_center.html
+++ b/safety_center.html
@@ -36,7 +36,7 @@
 
 <body>
 	<div>
-		<a class="header--logo" href="index.html" id="navbar">
+		<a class="header--logo" href="index" id="navbar">
 			<img src="assets/img/logo.png" class="header--logo--img" id="logoNavbar" alt="ZeoFlow" data-bs-hover-animate="swing">
 		</a>
 	</div>
