--- a/teodor_grigor.html
+++ b/teodor_grigor.html
@@ -45,7 +45,7 @@
     <div id="viewport" class="l-viewport">
       <div class="l-wrapper">
         <header class="header">
-          <a class="header--logo" href="index.html">
+          <a class="header--logo" href="index">
     <img src="assets/img/logo.png" class="header--logo--img" alt="ZeoFlow">
             <p>ZeoFlow</p>
           </a>
@@ -72,7 +72,7 @@
                   <h3>LvStore App</h3>
                   <p>Get access to all of my latest and upcomming apps, All at one place.</p>
                 </a>
-                 <a href="hify.html">
+                 <a href="hify">
                   <h3>Hify</h3>
                   <p>Just another social networking app which was inspired by the concept of Instagram.</p>
                 </a>
