--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <img src="assets/img/logo.png" class="header--logo--img" alt="ZeoFlow">
             <p>ZeoFlow</p>
           </a>
-          <a href="teodor_grigor">
+          <a href="https://grigorteodor.github.io/home/">
           <button class="header--cta cta">About Developer</button>
 		  </a>
           <div class="header--nav-toggle">
